feat(auth): add Google login functionality and 2FA verification
- Implemented `loginWithGoogle` method in authService to handle Google authentication.
- Added error handling for Google login responses.
- Introduced `verifyTwoFactor` method for 2FA verification process.
- Updated existing login and registration methods for consistency in error messages and localStorage usage.

feat(services): create services API service

- Added a new `servicesService` module to manage service-related API calls.
- Implemented methods for fetching service plans, contracting services, processing payments, and managing user services.
- Included error handling for all service-related API requests.
- Created utility functions for authentication token management and header creation.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 VITE_API_URL=http://localhost:8000/api
 VITE_APP_NAME="ROKE Industries Hosting"
+VITE_GOOGLE_CLIENT_ID="TU_ID_DE_CLIENTE_DE_GOOGLE.apps.googleusercontent.com"
 
