Implementar gestión completa de métodos de pago con Stripe Elements
- Crear AddPaymentMethodModal con integración Stripe Elements
- Actualizar PaymentMethods con UI premium y funcionalidad completa
- Implementar agregar, eliminar y establecer método predeterminado
- Agregar servicios para Setup Intent y gestión de métodos
- Integrar Stripe.js y React Stripe.js de forma segura
- Mostrar información detallada de tarjetas (marca, últimos 4 dígitos)
- Alertas inteligentes para tarjetas próximas a expirar
- Dropdown contextual con acciones por método
- Manejo profesional de errores y estados de carga
- Tokenización segura sin almacenar datos sensibles
- Configuración de variables de entorno para Stripe
- Diseño premium acorde con la plataforma

Autor: kmartinezabarca

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ VITE_API_URL=http://localhost:8000/api
 VITE_APP_NAME="ROKE Industries Hosting"
 VITE_GOOGLE_CLIENT_ID="TU_ID_DE_CLIENTE_DE_GOOGLE.apps.googleusercontent.com"
 
+
+# Stripe Configuration
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
