feat: Integración de Pusher en el frontend (notificaciones y chat) con React Query

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,14 @@ VITE_GOOGLE_CLIENT_ID="TU_ID_DE_CLIENTE_DE_GOOGLE.apps.googleusercontent.com"
 # Stripe Configuration
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 
+
+
+# Pusher Configuration
+VITE_PUSHER_APP_ID=2047440
+VITE_PUSHER_APP_KEY=5b7e09b16908ed665ba6
+VITE_PUSHER_APP_SECRET=feb2cdc72e7b381e6464
+VITE_PUSHER_HOST=api-us2.pusher.com
+VITE_PUSHER_PORT=443
+VITE_PUSHER_SCHEME=https
+VITE_PUSHER_APP_CLUSTER=us2
+
