--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
+    "prop-types": "^15.8.1",
+    "pusher-js": "^8.4.0",
     "react": "^19.1.0",
     "react-country-flag": "^3.1.0",
     "react-day-picker": "8.10.1",
