--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.15.0",
     "input-otp": "^1.4.2",
+    "laravel-echo": "^2.2.0",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
     "prop-types": "^15.8.1",
